navbar z-index issue resolved

--- a/src/features/NavBar/index.scss
+++ b/src/features/NavBar/index.scss
@@ -5,7 +5,7 @@
     width: 100%;
     height: 60px;
     background-color: black;
-    z-index: 2;
+    z-index: 3;
 
     &-navigation {
         @include flex(row, flex-start, center, nowrap);
